--- a/03.tex
+++ b/03.tex
@@ -66,6 +66,11 @@ From the table we compute $S(M) = \{[a], [b], [c], [b^2], [bc], [cb]\}$.
 Suppose $S(M)$ is a group with $u,v \in \Sigma^*, \delta_u, \delta_v \in \lsk \mathcal{F}(M) \rsk$ then there exists for an arbitrary but fixed $\delta_u$ another $\delta_v$ with $\delta_u \delta_v = id_Q$.
 Notice we can choose $q_1\delta_b = \bot$ and we cannot find any $\delta_v$ with $\bot \delta_v = q_1$.
 Therefore $S(M)$ is not a group.
+
+Now assume $S(M)$ is a monoid.
+Hence, there exists $u \in \Sigma^*, \delta_u \in \lsk \mathcal{F}(M) \rsk$ with $\delta_u = id_Q$.
+Notice $\delta_a$ satisfies this condition and acts a neutral element.
+Thus, $S(M)$ is a monoid.
 \qed
 
 \section{}
