--- a/04.tex
+++ b/04.tex
@@ -93,4 +93,10 @@ Finally $\delta'_q = \overline{q}$ because $\delta'_q$ maps all states to $q$ an
 \qed
 \section{}
 \section{}
+To prove that every group acts on itself we need show compatibility and faithfulness for a function $f: G \times G \rightarrow G; (g,g') \mapsto g'g$ with G being a group.
+Compatibility follows  due to groups being associative.
+Let $g_1,g_2 \in G$.
+Let $gg_1 = gg_2 (0)$ for all $g \in G$ assume $g_1 \neq g_2$. Set $g$ to the neutral element $\epsilon$ which is allowed since (0) holds true for all $g \in G$.
+Hence, $\epsilon g_1 = \epsilon g_2 \iff g_1 = g_2$ which contradicts $g_1 \neq g_2$.
+This concludes the proof.
 \end{document}
