--- a/04.tex
+++ b/04.tex
@@ -92,6 +92,12 @@ Since $\lsk F(M') \rsk \simeq S(M')$ for all $q \in Q$ also $\delta'_q \in F(M')
 Finally $\delta'_q = \overline{q}$ because $\delta'_q$ maps all states to $q$ and is therefore a constant mapping which proves that $\overline{Q} \subseteq S'$ and further $\overline{TS(M)}=(Q,\lsk S \cup \overline{Q} \rsk)=TS(M')=(Q,\lsk S' \cup \overline{Q} \rsk)$.
 \qed
 \section{}
+Given $\mathbb{Z}_2$ we obtain the transformation semigroup $(\mathbb{Z}_2,\mathbb{Z}_2)$ with right multiplication as an action (Lemma 3.28).
+Let $a,b \in \mathbb{Z}_2$ we compute $a+b$ by adding its corresponding equivalence classes $[a] + [b]$.
+To obtain the equivalence classes we compute the modulo:
+$$a\mod2 + b \mod2$$.
+By definition $a \mod2 + b \mod2 = a + b \mod2$ which is equal to $\delta(a,b)$.
+\qed
 \section{}
 To prove that every group acts on itself we need show compatibility and faithfulness for a function $f: G \times G \rightarrow G; (g,g') \mapsto g'g$ with G being a group.
 Compatibility follows  due to groups being associative.
