--- a/04.tex
+++ b/04.tex
@@ -36,6 +36,7 @@
 
 \def\lsk{\left<}
 \def\rsk{\right>}
+\DeclareMathOperator{\mmod}{mod}
 
 \begin{document}
 \automark{section}
@@ -45,26 +46,45 @@
 \chapter{}
 \section{}
 
-We can find a state machine homomorphism (SMH) for $M$ and $M'$ which is monomorphic but not epimorphic or isomorphic. To prove this conjecture we will first show that there can not exist a epimorphic SMH. For a SMH $f$ to be epimorphic it has to be surjective.
+We can find a state machine homomorphism (SMH) for $M$ and $M'$ which is neither monomorphic nor epimorphic and therefore not isomorphic.
+To prove this conjecture we will first show that there can not exist a epimorphic SMH.
+For a SMH $f$ to be epimorphic it has to be surjective.
 This means that given $f=(\alpha, \beta)$:
 \begin{equation}
     \alpha : Q \rightarrow Q' \land \beta : \Sigma \rightarrow \Sigma'
 \end{equation}
 the range of $\alpha$ and $\beta$ have to be equal to $Q'$ and $\Sigma'$ respectively.
 
-Lets assume that $\alpha$ maps to $Q'$ and $\beta$ to $\Sigma'$. This means that we have to map the states of $Q$ to the states of $Q'$. The state $r\textsubscript{1}$ is isolated whilst the states $r\textsubscript{2}$ and $r\textsubscript{3}$ form a cyclic state machine with stern with stern length and cycle length of $1$. Therefore, we would need to find a similar structure in $Q$ to map the states to $Q'$. If we look for these structures in $M$ we can find an isolated state $q\textsubscript{4}$ when we disregard $c$. However, we can only find a cyclic state machine with stern if we either disregard $a,c$ or $b,c$ since the combination of $b$ and $c$ allows us to always move between the states of $q\textsubscript{i}$ $| i \in {3}$. Thus, we can not find a mapping of $\beta$ to $\Sigma'$, since, we need to omit either at least $2$ out of $3$ elements of $\Sigma$ to be able to represent the structure of $M$, therefore, either $\alpha$ or $\beta$ can not be surjective.
+Let's suppose that $\alpha$ maps to $Q'$ and $\beta$ to $\Sigma'$.
+This means that we have to map the states of $Q$ to the states of $Q'$.
+The state $r\textsubscript{1}$ is isolated whilst the states $r\textsubscript{2}$ and $r\textsubscript{3}$ form a cyclic state machine with stern with stern length and cycle length of $1$.
+Therefore, we would need to find a similar structure in $Q$ to map the states to $Q'$.
+If we look for these structures in $M$ we can find an isolated state $q\textsubscript{4}$ when we disregard $c$.
+However, we can only find a cyclic state machine with stern if we either disregard $a,c$ or $b,c$ since the combination of $b$ and $c$ allows us to always move between the states of $q\textsubscript{i}$ $| i \in {3}$.
+Thus, we can not find a mapping of $\beta$ to $\Sigma'$, since, we need to omit either at least $2$ out of $3$ elements of $\Sigma$ to be able to represent the structure of $M$, therefore, either $\alpha$ or $\beta$ can not be surjective.
 
-To prove that $M$ and $M'$ are monomorphic we only have to provide a state machine homomorphism that is injective. For this we map $a$ onto $a'$ and $q\textsubscript{4}$ onto $r\textsubscript{1}$. $\alpha$ is injective because there only exists a single element in the relation, therefore, there can only exists a one-to-one mapping. For $\beta$ this is the same case as only the tuple $(q\textsubscript{4}, r\textsubscript{1})$ exists in $\beta$. 
-Now we need to show that
-\begin{equation}
-\forall q \in Q \land \forall a \in \Sigma : \alpha(q\delta\textsubscript{a}) \subseteq (\alpha(q))\delta'\textsubscript{$\beta(a)$}
-\end{equation}
+To prove that $M$ and $M'$ are not monomorphic we have to show there is no injective SMH.
+Since, $M'$ has less states as well as a smaller alphabet and a homomorphism must be total, some states of $M$ have to map to the same state in $M'$ which contradicts injectivity.
 
-Since, there only exist one element with one state we can apply the transition function for the element $a$ on the state $q\textsubscript{4}$ and then apply $\alpha$. $\delta\textsubscript{a}$ on $q\textsubscript{4}$ results in $q\textsubscript{4}$, and if we then apply $\alpha$ this results in $r\textsubscript{1}$. If we first apply $\alpha$ on $q\textsubscript{4}$ this results in $r\textsubscript{1}$. And if we then apply $\delta'\textsubscript{$\beta(a)$}$ on $r\textsubscript{1}$ it stays in $r\textsubscript{1}$ which proves that it is a state machine morphism. 
-
-This concludes that $M$ and $M'$ are monomorphic.
+Now we show that $M$ and $M'$ are morphic by providing $(\alpha, \beta)$.
+\begin{align*}
+    \alpha:\ &q \mapsto r_1 \ \forall q \in Q \\
+    \beta:\ &u \mapsto a'\ \forall u \in \Sigma
+\end{align*}
+Since, we map all states to the same state in $M'$ and all letters to the same letter in $\Sigma'$ it does not matter if we either first compute in $M$ and then transform into $M'$ or first transform into $M'$ and then compute there.
+We always end up in $r_1$.
+This concludes that $M$ and $M'$ are morphic but not monomorphic, epimorphic or isomorphic.
 \qed
 
+\vspace{1cm}
+As stated above, $M_1$ can only be monomorphic to $M_2$ if $|Q_1| \leq |Q_2|$ and there exists a one to one mapping with the homomorphism criteria.
+Same applies to $\Sigma_1$ and $\Sigma_2$.
+
+Moreover, $M_1$ can only be epimorphic to $M_2$ if $|Q_1| \geq |Q_2|$.
+Otherwise due right uniquness we can not map one state of $M_1$ to two or more states in $M_2$ and therefore can not hit the whole range of $Q_2$.
+This also applies to the alphabets.
+
+For an isomorphismus both conditions of a monomorphismus and epimorphismus must apply. Thus, we have $|Q_1| = |Q_2|$ and $|\Sigma_1| = |\Sigma_2|$.
 \section{}
 
 For Exercise 2 we need to prove that $TS(M')$ = $\overline{\mbox{TS(M)}}$ holds. The closure of a transformation semigroup $A = (Q, S)$ is defined as 
@@ -75,34 +95,44 @@ For Exercise 2 we need to prove that $TS(M')$ = $\overline{\mbox{TS(M)}}$ holds.
 For $TS(M')$ = $\overline{\mbox{TS(M)}}$ to hold true, $TS(M')$ has to include all possible transformations from $S$ and $Q$. Since, there exists a $\delta\textsubscript{a}$ for all $a \in \Sigma$ as well as the identity function for each state of q with $\delta'\textsubscript{a}(q) = a$ for all $a \in Q$ there can not exist any other transformations in $TS(M')$ that are not included in the closure of $TS(M) = \overline{\mbox{TS(M)}}$. Therefore, $TS(M')$ = $\overline{\mbox{TS(M)}}$ holds true.
 \qed
 
-\section{}
-We show that $\overline{TS(M)}=TS(M')=(Q,S')$. By definition
-\begin{align*}
-    \overline{TS(M)}=(Q,\lsk S \cup \overline{Q} \rsk)
-\end{align*}
-$S'$ must contain for all $q \in Q$ the corresponding $\overline{q}$.
-Notice $S'= \Sigma^+/\sim_{M'}$.
-We assume that for each $q \in Q \subseteq \Sigma$ exists a congruence classes $[q] \in S'$.
-
-Proof:
-Due to the definition of $\delta'_a$ for all $q_1,q_2 \in Q \subseteq \Sigma$ with $q_1 \neq q_2$ follows $\delta'_{q_1}(q) \neq \delta'_{q_2}(q)$ for all $q \in Q$.
-Therefore, for all $q \in Q$ exists $[q]$ and $[q] \in \Sigma^+/\sim_{M'}$.
-
-Since $\lsk F(M') \rsk \simeq S(M')$ for all $q \in Q$ also $\delta'_q \in F(M')$.
-Finally $\delta'_q = \overline{q}$ because $\delta'_q$ maps all states to $q$ and is therefore a constant mapping which proves that $\overline{Q} \subseteq S'$ and further $\overline{TS(M)}=(Q,\lsk S \cup \overline{Q} \rsk)=TS(M')=(Q,\lsk S' \cup \overline{Q} \rsk)$.
-\qed
+% \section{}
+% We show that $\overline{TS(M)}=TS(M')=(Q,S')$. By definition
+% \begin{align*}
+%     \overline{TS(M)}=(Q,\lsk S \cup \overline{Q} \rsk)
+% \end{align*}
+% $S'$ must contain for all $q \in Q$ the corresponding $\overline{q}$.
+% Notice $S'= \Sigma^+/\sim_{M'}$.
+% We assume that for each $q \in Q \subseteq \Sigma$ exists a congruence classes $[q] \in S'$.
+%
+% Proof:
+% Due to the definition of $\delta'_a$ for all $q_1,q_2 \in Q \subseteq \Sigma$ with $q_1 \neq q_2$ follows $\delta'_{q_1}(q) \neq \delta'_{q_2}(q)$ for all $q \in Q$.
+% Therefore, for all $q \in Q$ exists $[q]$ and $[q] \in \Sigma^+/\sim_{M'}$.
+%
+% Since $\lsk F(M') \rsk \simeq S(M')$ for all $q \in Q$ also $\delta'_q \in F(M')$.
+% Finally $\delta'_q = \overline{q}$ because $\delta'_q$ maps all states to $q$ and is therefore a constant mapping which proves that $\overline{Q} \subseteq S'$ and further $\overline{TS(M)}=(Q,\lsk S \cup \overline{Q} \rsk)=TS(M')=(Q,\lsk S' \cup \overline{Q} \rsk)$.
+% \qed
 \section{}
 Given $\mathbb{Z}_2$ we obtain the transformation semigroup $(\mathbb{Z}_2,\mathbb{Z}_2)$ with right multiplication as an action (Lemma 3.28).
-Let $a,b \in \mathbb{Z}_2$ we compute $a+b$ by adding its corresponding equivalence classes $[a] + [b]$.
-To obtain the equivalence classes we compute the modulo:
-$$a\mod2 + b \mod2$$.
-By definition $a \mod2 + b \mod2 = a + b \mod2$ which is equal to $\delta(a,b)$.
+Let $a,b \in \mathbb{Z}_2$ and notice $\mathbb{Z}_2 = \{[0],[1]\}$.
+We compute $a+b$ by using the action and therefore adding its corresponding equivalence classes $[a] + [b]$.
+To obtain the equivalence classes we use the mudolo operator:
+\begin{align*}
+    &[a] + [b]\\
+    =\ &a\mmod2 + b \mmod2 \\
+    =\ &a + b \mmod2 \\
+\end{align*}
+By definition of the mudolo operator $a \mmod2 + b \mmod2 = a + b \mmod2$ which is equal to $\delta(a,b)$.
 \qed
+
 \section{}
 To prove that every group acts on itself we need show compatibility and faithfulness for a function $f: G \times G \rightarrow G; (g,g') \mapsto g'g$ with G being a group.
 Compatibility follows  due to groups being associative.
 Let $g_1,g_2 \in G$.
-Let $gg_1 = gg_2 (0)$ for all $g \in G$ assume $g_1 \neq g_2$. Set $g$ to the neutral element $\epsilon$ which is allowed since (0) holds true for all $g \in G$.
-Hence, $\epsilon g_1 = \epsilon g_2 \iff g_1 = g_2$ which contradicts $g_1 \neq g_2$.
+Let $gg_1 = gg_2 (0)$ for all $g \in G$ suppose $g_1 \neq g_2$.
+To fulfill the equation $g$ has to be the inverse element of $g_1$ and $g_2$.
+But because $g$ is fixed it also has to be the same element.
+Furthermore the inverse element exists only for one other element in the group.
+Thus, $g$ can not be the inverse of $g_1$ and $g_2$ at the same time.
+This contradicts $g_1 \neq g_2$.
 This concludes the proof.
 \end{document}
