--- a/05.tex
+++ b/05.tex
@@ -62,13 +62,16 @@ This is a contraction because $q\delta_a$ is not right unique anymore.
 
 \section{}
 We proove for a transformation semigroup transformation $(Q,S)$ which is irreducable such that for all $q \in Q$ either $|qS| = 1$  or $qS = Q$.
-Assume $|qS| = 1$ for any $q \in Q$. This means we find one arbitray but fixed $q' \in Q$ such that $qS = q'$.
+Assume $|qS| = 1$ for a given $q \in Q$. This means we find one arbitray but fixed $q' \in Q$ such that $qS = q'$.
 Moreover, $q = H_i$ and $q' = H_j$ with $i,j \in I$, it is the trival partition of singleton classes.
-Now assume $qS = Q$ for any $q \in Q$. This means for each $s \in S$ with $qs = q'$ we map to a different $q'$ such that $\bigcup q' = Q$.
+Now assume $qS = Q$ for a given $q \in Q$. This means for each $s \in S$ with $qs = q'$ we map to a different $q'$ such that $\bigcup q' = Q$.
 Thus, we get the trivial partition of $Q$.
 
-
-Finally suppose $|qS| > 1 \land qS \neq Q$ for any $q \in Q$. Then $qS$ maps into two or more patitions (up to $|Q|-1$) which contradicts the condition of $(Q,S)$ being irreducable.
+Finally suppose $|qS| > 1 \land qS \neq Q$ for any $q \in Q$.
+Then there exists $qs' = q'$ and $qs'' = q''$ with $q' \in H_j, q'' \in H_k$ and $j \neq k$.
+Also notice that that there exists at least one other $s''' \in S$ which is also in $H_j$ or $H_k$ because otherwise $qS = Q$.
+Therefore 
+% Then $qS$ maps into two or more patitions (up to $|Q|-1$) which contradicts the condition of $(Q,S)$ being irreducable.
 
 
 \section{}
