--- a/05.tex
+++ b/05.tex
@@ -61,7 +61,7 @@ Notice $q_j \neq q_k$ because $H_j \cap H_k = \emptyset$.
 This is a contraction because $q\delta_a$ is not right unique anymore.
 
 \section{}
-We proove for a transformation semigroup transformation $(Q,S)$ which is irreducable that for all $q \in Q$ either $|qS| = 1$  or $qS = Q$.
+We prove for a transformation semigroup  $(Q,S)$ which is irreducable that for all $q \in Q$ either $|qS| = 1$  or $qS = Q$.
 Assume $|qS| = 1$ for a given $q \in Q$. This means we find one arbitray but fixed $q' \in Q$ such that $qS = q'$.
 Thus, all states act the same and are equivalent, it is the trival partition of $Q$ itself.
 Now assume $qS = Q$ for a given $q \in Q$. This means for each $s \in S$ with $qs = q'$ we map to a different $q'$ such that $\bigcup q' = Q$.
