--- a/05.tex
+++ b/05.tex
@@ -61,21 +61,27 @@ Notice $q_j \neq q_k$ because $H_j \cap H_k = \emptyset$.
 This is a contraction because $q\delta_a$ is not right unique anymore.
 
 \section{}
-We prove for a transformation semigroup  $(Q,S)$ which is irreducable that for all $q \in Q$ either $|qS| = 1$  or $qS = Q$.
-Assume $|qS| = 1$ for a given $q \in Q$. This means we find one arbitray but fixed $q' \in Q$ such that $qS = q'$.
-Thus, all states act the same and are equivalent, it is the trival partition of $Q$ itself.
-Now assume $qS = Q$ for a given $q \in Q$. This means for each $s \in S$ with $qs = q'$ we map to a different $q'$ such that $\bigcup q' = Q$.
-Thus, we find no relation between the state and get the trivial partition of singleton classes.
+%We prove for a transformation semigroup  $(Q,S)$ which is irreducable that for all $q \in Q$ either $|qS| = 1$  or $qS = Q$.
+%Assume $|qS| = 1$ for a given $q \in Q$. This means we find one arbitray but fixed $q' \in Q$ such that $qS = q'$.
+%Thus, all states act the same and are equivalent, it is the trival partition of $Q$ itself.
+%Now assume $qS = Q$ for a given $q \in Q$. This means for each $s \in S$ with $qs = q'$ we map to a different $q'$ such that $\bigcup q' %= Q$.
+%Thus, we find no relation between the state and get the trivial partition of singleton classes.
 
-Finally suppose $|qS| > 1 \land qS \neq Q$ for all $q \in Q$.
-We can build the partition of $Q$ by states reachable of $q$ and not reachable by $q$.
-Let $$\pi = \{qS, Q \setminus qS\} = \{H_1, H_2\}$$.
-We show $\pi$ is an admissible partition for all $i \in I$ and all $s \in S$ there exists $j \in I$ such that $H_is \subseteq H_js$.
+%Finally suppose $|qS| > 1 \land qS \neq Q$ for all $q \in Q$.
+%We can build the partition of $Q$ by states reachable of $q$ and not reachable by $q$.
+%Let $$\pi = \{qS, Q \setminus qS\} = \{H_1, H_2\}$$.
+%We show $\pi$ is an admissible partition for all $i \in I$ and all $s \in S$ there exists $j \in I$ such that $H_is \subseteq H_js$.
 % Then there exists $qs' = q'$ and $qs'' = q''$ with $s',s'' \in S, q' \in H_j, q'' \in H_k$ and $j \neq k$.
 % Also notice that that there exists at least one other $s''' \in S$ which is also in $H_j$ or $H_k$ because otherwise $qS = Q$.
 % Therefore we found a partition that is not trivial which contradicts the premise $(Q,S)$ is irreducable.
 % Then $qS$ maps into two or more patitions (up to $|Q|-1$) which contradicts the condition of $(Q,S)$ being irreducable.
 
+Let $\pi = H_{i | i\in I}$ be an admissible partition on the transformation $Q$, than we know its equivalence classes are either singletons or the entire set $Q$. Now let's form the orbit $qS = {q' \in Q: s(q) = q' | q \in Q}$. \\
+\textbf{Case 1:}\\
+In this case, the trivial partition on $Q$ is $Q$ itself. This means, that for each state $q \in Q$, we can find an action $s \in S$ such that $s(q) = q' | q' \in Q$. Therefore, the cardinality of the orbit in this case is $|Q|$ itself.\\
+\textbf{Case 2:}\\
+In this case, the trivial partition on $Q$ is the set of singleton classes of $Q$. Here, each state $q \in Q$, is only able to reach itself via some $s \in S$, therefore, the cardinality of the orbit in this case has to be $1$.
+\qed
 
 \section{}
 \begin{enumerate}
