--- a/06.tex
+++ b/06.tex
@@ -49,7 +49,7 @@
 We choose $\alpha : Q_1 \rightarrow Q_2$ as our $\eta: Q_1 \rightarrow Q_2$.
 We define $\xi: \Sigma_2 \rightarrow \Sigma_1$ as a function which picks an arbitrary element of $\xi_{a_2} = \{a_1 | \beta(a_1) = a_2, a_1 \in \Sigma_1\}$ for an arbitraty $a_2 \in \Sigma_2$ (1).
 There exists at least one $a_1$ for each $a_2$ because $\beta$ is surjective (2).
-Since $(\alpha,\beta)$ is a state machine homomorphismus and the maschines are complete following holds for all $a_1 \in \Sigma_1$ and all $q_1 \in Q_1$:
+Since $(\alpha,\beta)$ is a state machine homomorphismus and the maschines are complete following holds for all $a_1 \in \Sigma_1$ and all $q_1 \in Q_1$ (Definition 3.37):
 $$
 \alpha(q_1\delta^1_{a_1}) = (\alpha(q_1))\delta^2_{\beta(a_1)}
 $$ 
@@ -62,6 +62,15 @@ Now we show: $\eta(q_1)\delta^2_{a_2} \subseteq \eta(q_1\delta^1_{\xi(a_2)})$ fo
                  = & \alpha(q_1\delta^1_{\xi(a_2)})\label{eq2}\tag{1} \\
                  = & \eta(q_1\delta^1_{\xi(a_2)})
 \end{align*}
+    \item An monomorphismus $(\alpha, \beta): M_1 \rightarrow M_2$ with complete machines implies $M_1 \leq M_2$: \\
+        We choose $\beta: \Sigma_1 \rightarrow \Sigma_2$ as our $\xi: \Sigma_1 \rightarrow \Sigma_2$.
+        We define $\eta: Q_2 \rightarrow Q_1$ as the inverse function from $\alpha: Q_1 \rightarrow Q_2$ which is well defined (Lemma 2.20).
+        For each $q_2 \in Q_2$ with $\alpha^{-1}(q_2) \neq \emptyset$ there exists exactly one $q_1 = \alpha^{-1}(q_2)$ because $\alpha$ is injective.
+        We show: $\eta(q_2)\delta^1_{a_1} \subseteq \eta(q_2\delta^2_{\xi(a_1)})$ for all $q_2 \in Q_2$ and $a_1 \in \Sigma_1$.
+    \begin{align*}
+        \eta(q_2)\delta^1_{a_1} = & \alpha^{-1}(q_2)\delta^1_{a_1} \\
+                     = & \eta(q_2\delta^2_{\xi(a_1)})
+    \end{align*}
 \end{enumerate}
 
 \section{}
