--- a/06.tex
+++ b/06.tex
@@ -67,16 +67,33 @@ Now we show: $\eta(q_1)\delta^2_{a_2} \subseteq \eta(q_1\delta^1_{\xi(a_2)})$ fo
 \section{}
 For the covering relation to be a partial order it has to be \textit{reflexive, antisymmetric} and \textit{transitive}.\\
 \textbf{Proof:}\\
-Lets begin by showing that $\le$ is reflexive, for this let $M = (Q, \Sigma, \delta)$. We need to show that $M \le M$ is true. For $M$ to cover itself, there needs to exist a partial function $\eta: Q \rightarrow Q$ which is \begin{enumerate}
+Lets begin by showing that $\le$ is \textit{reflexive}, for this let $M = (Q, \Sigma, \delta)$. We need to show that $M \le M$ is true. For $M$ to cover itself, there needs to exist a partial function $\eta: Q \rightarrow Q$ which is \begin{enumerate}
     \item surjective
     \item $\eta(q')\delta_w = \eta(q'\delta'_w)$ for all $w \in \Sigma^*$ and all $q' \in \mathcal{D}(\eta)$
     \item $\eta(q') = \emptyset$ if $q' \notin \mathcal{D}(\eta)$
     \item $q\delta_w = \emptyset$ if $ \delta(q, w)$ is undefined
 \end{enumerate}
-We use $id_Q$ for $\eta$, since, we do not need to change anything for $M$ to cover it self. $id_Q$ is surjective, because the identity function maps every element in $Q$ onto the same element in $Q$, therefore, it hits all elements in $Q$. Since, $\delta_w = \delta'_w$ the second primitive holds. The third holds for the identity function, since, it can only map an element to itself and if $q'$ is not in its domain (here $Q$ itself) it can not map it onto anything thus $id_Q(q') = \emptyset$ if $q' \notin \mathcal{D}(\eta)$. And the fourth holds because $M$ is complete.\\
-Next we show that $\le$ is \textit{antisymmetric}:\\ Let $M_1 = (Q, \Sigma, \delta), M_2=(Q', \Sigma, ,\delta'$ be two state machines with $M_1 \le M_2 \land M_2 \le M_1$. We need to show that for this $M_1 = M_2$. Since, $M_1 \le M_2 \land M_2 \le M_1$ we know there exists two partial functions $\eta : Q' \rightarrow Q \land \eta' : Q \rightarrow Q'$ which are surjective. Furthermore, we know that 
-$\eta(q')\delta_w = \eta(q'\delta'_w) $ for all $ w\in \Sigma^* $ and all $ q' \in \mathcal{D}(\eta)$ and $\eta(q)\delta'_w = \eta(q\delta_w)$ for all $w \in \Sigma^*$ and all $q \in \mathcal{D}(\eta')$ 
+We use $id_Q$ for $\eta$, since, we do not need to change anything for $M$ to cover it self. $id_Q$ is surjective, because the identity function maps every element in $Q$ onto the same element in $Q$, therefore, it hits all elements in $Q$. Since, $\delta_w = \delta'_w$ the second primitive holds. The third holds for the identity function, since, it can only map an element to itself and if $q'$ is not in its domain (here $Q$ itself) it can not map it onto anything thus $id_Q(q') = \emptyset$ if $q' \notin \mathcal{D}(\eta)$. And the fourth holds because $M$ is complete.\\ \\
+Next we show that $\le$ is \textit{antisymmetric}:\\ Let $M_1 = (Q, \Sigma, \delta), M_2=(Q', \Sigma, ,\delta')$ be two state machines with $M_1 \le M_2 \land M_2 \le M_1$. We need to show that for this $M_1 = M_2$. Since, $M_1 \le M_2 \land M_2 \le M_1$ we know there exists two partial functions $\eta : Q' \rightarrow Q \land \eta' : Q \rightarrow Q'$ which are surjective. Furthermore, we know that 
+$\eta(q')\delta_w = \eta(q'\delta'_w) $ for all $ w\in \Sigma^* $ and all $ q' \in \mathcal{D}(\eta)$ and $\eta(q)\delta'_w = \eta(q\delta_w)$ for all $w \in \Sigma^*$ and all $q \in \mathcal{D}(\eta')$, therefore, the two machines have to be isometric.\\
 
+At last we show \textit{transitivity}: Let $M_1 = (Q_1, \Sigma, \delta), M_2 = (Q_2, \Sigma, \delta_2), M_3 = (Q_3, \Sigma, \delta_3)$ be state machines. Let $M_1 \le M_2 \le M_3$ with $\eta_1 : Q_2 \rightarrow Q_1 \land \eta_2 : Q_3 \rightarrow Q_2$ such that 
+\begin{equation}
+    \eta_1(q_2)\delta^1_w = \eta_1(q_2\delta^2_w) ~|~ \forall w \in \Sigma^*, \forall q_2 \in Q_2 
+\end{equation}
+\begin{equation}
+    \eta_2(q_3)\delta^2_w = \eta_2(q_3\delta^3_w) ~|~ \forall w \in \Sigma^*, \forall q_3 \in Q_3
+\end{equation}
+The claim is that if this holds, $M_1 \le M_3$ also holds. For $M_1 \le M_3$ we need to find an $\eta_3 : Q_3 \rightarrow Q_1$.
+Our claim is that the concatenation of $\eta_1$ and $\eta_2$ will hold for $\eta_3$
+\begin{align*}
+    \eta_3 (q_3)\delta^1_w  = & \eta_1(\eta_2(q_3))\delta^1_w \\
+                            = & \eta_1(\eta_2(q_3)\delta^2_w) \\
+                            = & \eta_1(\eta_2(q_3\delta^3_w)) \\
+                            = & \eta_3(q_3\delta^3_w)
+\end{align*}
+This concludes the proof.
+\qed
 \section{}
 \section{}
 We show $M \leq M'$ by using the following covering $(\eta, \xi)$:
