--- a/06.tex
+++ b/06.tex
@@ -69,6 +69,8 @@ Now we show: $\eta(q_1)\delta^2_{a_2} \subseteq \eta(q_1\delta^1_{\xi(a_2)})$ fo
         We show: $\eta(q_2)\delta^1_{a_1} \subseteq \eta(q_2\delta^2_{\xi(a_1)})$ for all $q_2 \in Q_2$ and $a_1 \in \Sigma_1$.
     \begin{align*}
         \eta(q_2)\delta^1_{a_1} = & \alpha^{-1}(q_2)\delta^1_{a_1} \\
+                     = & \alpha^{-1}(q_2\delta^2_{a_2}) \\
+                     = & \alpha^{-1}(q_2\delta^2_{\xi(a_1)}) \\
                      = & \eta(q_2\delta^2_{\xi(a_1)})
     \end{align*}
 \end{enumerate}
